# connectteam-to-costpoint-new-employees

./: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/clients/: connecteam.py  deltek.py
app/models/: model.py
app/services/: aws.py  aws_standard.py  email_service.py  event_service.py  secrets_service.py  sync.py
app/utils/: observability.py  utils.py
